// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`separator > renders correctly horizontally 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_sentiment_neutral__bu43fbi"
      role="separator"
      style="--bu43fb0: 1px;"
    />
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly vertically 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="vertical"
      class="styles__bu43fbb styles_direction_vertical__bu43fbd styles_sentiment_neutral__bu43fbi"
      role="separator"
      style="--bu43fb0: 1px;"
    />
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with custom icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-orientation="horizontal"
      class="styles__bu43fb1 styles_direction_horizontal__bu43fb2 styles_sentiment_neutral__bu43fb6"
      role="separator"
    >
      <hr
        class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_hasIcon_true__bu43fbf styles_sentiment_neutral__bu43fbi"
        style="--bu43fb0: 1px;"
      />
      <svg
        class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_hasIcon_true__bu43fbf styles_sentiment_neutral__bu43fbi"
        style="--bu43fb0: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-orientation="horizontal"
      class="styles__bu43fb1 styles_direction_horizontal__bu43fb2 styles_sentiment_neutral__bu43fb6"
      role="separator"
    >
      <hr
        class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_hasIcon_true__bu43fbf styles_sentiment_neutral__bu43fbi"
        style="--bu43fb0: 1px;"
      />
      <svg
        class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_hasIcon_true__bu43fbf styles_sentiment_neutral__bu43fbi"
        style="--bu43fb0: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-orientation="vertical"
      class="styles__bu43fb1 styles_direction_vertical__bu43fb3 styles_sentiment_neutral__bu43fb6"
      role="separator"
    >
      <hr
        class="styles__bu43fbb styles_direction_vertical__bu43fbd styles_hasIcon_true__bu43fbf styles_sentiment_neutral__bu43fbi"
        style="--bu43fb0: 1px;"
      />
      <svg
        class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fbb styles_direction_vertical__bu43fbd styles_hasIcon_true__bu43fbf styles_sentiment_neutral__bu43fbi"
        style="--bu43fb0: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with custom sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_sentiment_primary__bu43fbj"
      role="separator"
      style="--bu43fb0: 1px;"
    />
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with custom sentiment and icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-orientation="horizontal"
      class="styles__bu43fb1 styles_direction_horizontal__bu43fb2 styles_sentiment_primary__bu43fb7"
      role="separator"
    >
      <hr
        class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_hasIcon_true__bu43fbf styles_sentiment_primary__bu43fbj"
        style="--bu43fb0: 1px;"
      />
      <svg
        class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8.25 2a.75.75 0 0 1 .75.75v8.69l1.22-1.22a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.06 0l-2.5-2.5a.75.75 0 1 1 1.06-1.06l1.22 1.22V2.75A.75.75 0 0 1 8.25 2"
          fill-rule="evenodd"
        />
        <path
          d="M10.25 4a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
        />
      </svg>
      <hr
        class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_hasIcon_true__bu43fbf styles_sentiment_primary__bu43fbj"
        style="--bu43fb0: 1px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with custom thickness 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_sentiment_neutral__bu43fbi"
      role="separator"
      style="--bu43fb0: 3px;"
    />
  </div>
</DocumentFragment>
`;

exports[`separator > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <hr
      aria-orientation="horizontal"
      class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_sentiment_neutral__bu43fbi"
      role="separator"
      style="--bu43fb0: 1px;"
    />
  </div>
</DocumentFragment>
`;
